added icons and starting to create modal to create issues/projects

--- a/src/content/main.html
+++ b/src/content/main.html
@@ -6,17 +6,18 @@
             </div>
             <div class="content gray">
                <ul class="side-nav">
-                   <li class="el-side-nav">Library</li>
-                   <li class="el-side-nav">Roadmap</li>
-                   <li class="el-side-nav">Board</li>
-                   <li class="el-side-nav">Code</li>
-                   <li class="el-side-nav">Pages</li>
-                   <li class="el-side-nav">Add item</li>
-                   <li class="el-side-nav">Project settings</li>
+                   <li class="el-side-nav"><i class="fas fa-rocket"></i>Library</li>
+                   <li class="el-side-nav"><i class="fas fa-road"></i>Roadmap</li>
+                   <li class="el-side-nav"><i class="fas fa-columns"></i></i>Board</li>
+                   <li class="el-side-nav"><i class="fas fa-code"></i>Code</li>
+                   <li class="el-side-nav"><i class="fas fa-file-alt"></i>Pages</li>
+                   <li class="el-side-nav"><i class="far fa-plus-square"></i>Add item</li>
+                   <li class="el-side-nav"><i class="fas fa-cog"></i>Project settings</li>
                </ul>   
             </div>
             <div class="content white">
                 <section class="header">
+                    Project / Library
                     <h2 class="heading">Name Board</h2>
                 </section>
                 <section class="body">
@@ -26,4 +27,11 @@
                 </section>
             </div>
         </section>
+
+        <div class="modal-wrapper">
+            <div class="modal">
+                <h3 class="card-heading">Create issue</h3>
+    
+            </div>
+        </div>
     </div>
