--- a/src/content/navbar.html
+++ b/src/content/navbar.html
@@ -2,12 +2,12 @@
     <nav>
         <ul class="main-bar">
             <li class="el-main-nav">Your Work</li>
-            <li class="el-main-nav">Projects</li>
-            <li class="el-main-nav">Filters</li>
-            <li class="el-main-nav">Dashboards</li>
-            <li class="el-main-nav">People</li>
-            <li class="el-main-nav">Apps</li>
-            <li class="el-main-nav">Create</li>
+            <li class="el-main-nav">Projects<span class="down-arrow"></span></li>
+            <li class="el-main-nav">Filters<span class="down-arrow"></span></li>
+            <li class="el-main-nav">Dashboards<span class="down-arrow"></span></li>
+            <li class="el-main-nav">People<span class="down-arrow"></span></li>
+            <li class="el-main-nav">Apps<span class="down-arrow"></span></li>
+            <li class="el-main-nav createBtn">Create</li>
         </ul>
     </nav>
 </div>
