--- a/src/content/main.html
+++ b/src/content/main.html
@@ -21,9 +21,15 @@
                     <h2 class="heading">Name Board</h2>
                 </section>
                 <section class="body">
-                    <div class="sm-board">TO DO</div>
-                    <div class="sm-board">IN PROGRESS</div>
-                    <div class="sm-board">DONE</div>
+                    <div class="sm-board to-do">TO DO
+                        <ul class="list-to-do"></ul>
+                    </div>
+                    <div class="sm-board in-progress">IN PROGRESS
+                        <ul class="list-in-progress"></ul>
+                    </div>
+                    <div class="sm-board done">DONE
+                        <ul class="list-done"></ul>
+                    </div>
                 </section>
             </div>
         </section>
@@ -35,3 +41,4 @@
             </div>
         </div>
     </div>
+    <script src="/js/scripts.js"></script>
