--- a/src/content/main.html
+++ b/src/content/main.html
@@ -41,4 +41,4 @@
             </div>
         </div>
     </div>
-    <script src="/js/scripts.js"></script>
+    <!-- <script src="/js/scripts.js"></script> -->
