--- a/src/content/main.html
+++ b/src/content/main.html
@@ -2,9 +2,9 @@
     <div class="molo">
         <template id='new-modal'>
             <h2>Create Issue</h2>
-            <h3>Project</h3>
+            <!-- <h3>Project</h3> -->
             <p></p>
-            <select name="name-project" id=name-project>
+            <!-- <select name="name-project" id=name-project>
                 <option value="Default">One</option>
                 <option value="two">Two</option>
                 <option value="three">Three</option>
@@ -16,7 +16,7 @@
                 <option value="three">Three</option>
             </select>
             <h3>Summary</h3>
-            <input type="text">
+            <input type="text"> -->
             </template>
         <section class="section-row">
             <div class="side-bar blue">
