--- a/src/content/main.html
+++ b/src/content/main.html
@@ -43,6 +43,9 @@
                         <ul class="list-to-do"></ul>
                     </div>
                     <div class="sm-board in-progress">IN PROGRESS
+                        <div class="card">
+                            
+                        </div>
                         <ul class="list-in-progress"></ul>
                     </div>
                     <div class="sm-board done">DONE
