adding project list to main modal

--- a/src/content/navbar.html
+++ b/src/content/navbar.html
@@ -26,6 +26,15 @@
                 <label for="project-type">Project<span class="asterisc">*</span></label>
                 <input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-haspopu=
                 true aria-expanded="false" id="project-type" class="input-type-text">
+                <div class="list-projects">
+                    <ul>Recent Projects
+                        <li>Example</li>
+                    </ul>
+                    <ul>
+                        All Projects
+                        <li></li>
+                    </ul>
+                </div>
                 <!-- <select name="project-type" id="project-type">
                     option
                 </select> -->
