--- a/src/content/main.html
+++ b/src/content/main.html
@@ -55,10 +55,10 @@
             </div>
         </section>
 
-        <div class="modal-wrapper">
+        <!-- <div class="modal-wrapper">
             <div class="initial-modal">
                 <h3 class="card-heading">Create issue</h3>
             </div>
-        </div>
+        </div> -->
     </div>
     <!-- <script src="js/modal.js"></script> -->
