moved index and mobile to root

--- a/mobile.html
+++ b/mobile.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
 <link rel="stylesheet" href="css/template.css">
-<div class="molo">
+<link rel="stylesheet" href="css/template-viewport.css"><div class="molo">
     <header>
         <nav>
             <ul class="main-bar">
