--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
-<link rel="stylesheet" href="css/template.css">
+<link rel="stylesheet" href="public/css/template.css">
 <div class="molo">
     <header>
         <nav>
