--- a/src/content/main.html
+++ b/src/content/main.html
@@ -54,7 +54,7 @@
                 </section>
             </div>
         </section>
-
+hello
         <!-- <div class="modal-wrapper">
             <div class="initial-modal">
                 <h3 class="card-heading">Create issue</h3>
